Spelling is hard

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% if tournament -%}
-    <meta name="description" content="UWHScores for {{ tournament.name }} - Follow game results and check updated standings through the day.">
+    <meta name="description" content="UWHScores for {{ tournament.name }} - Follow game results and check updated standings throughout the day.">
     {% else %}
-    <meta name="description" content="UWHScores for tournaments - Follow game results and check updated standings through the day.">
+    <meta name="description" content="UWHScores for tournaments - Follow game results and check updated standings throughout the day.">
     {% endif %}
     <meta name="author" content="">
 	<title>Underwater Hockey Scores</title>
