--- a/app/templates/admin/update_single.html
+++ b/app/templates/admin/update_single.html
@@ -62,11 +62,13 @@
 
 <div id="page_body" class="container">
 	<h1>Update Score</h1>
+	<h3>{{tournament.name}}</h3>
 
 	{% for messages in get_flashed_messages() %}
 		<div class=alert alert-warning> {{ message }} </div>
 	{% endfor %}
 	<form action='/admin/update' method=post name='update'>
+		<input type=hidden name=tid value={{ tournament.tid }}>
 		<input type=hidden name=gid value={{ game.gid }}>
 		<input type=hidden name=btid value={{ game.black_tid }}>
 		<input type=hidden name=wtid value={{ game.white_tid }}>
