--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -74,6 +74,13 @@ tr.odd {
 	font-size: 1.25em;
 }
 
+.feature-item {
+	text-align: center;
+}
+
+.feature-circle {
+	color: #eee;
+}
 
 
 @media screen and (max-width: 1000px) {
@@ -91,7 +98,7 @@ tr.odd {
 	body{
 		font-size: 12px;
 	}
-	
+
 	/*.row {
 		page-break-before: always;
 	}*/
