--- a/app/templates/admin/show_admin.html
+++ b/app/templates/admin/show_admin.html
@@ -6,32 +6,48 @@
 
 {% block main %}
 
-	<div id="page-wrapper">
+<div id="page_body" class="container">
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="page-header tournament-header">
+			<h1 class="tournament-title">Admin Panel Home</h1>
+			</div>
+		</div>
+	</div>
 
-	<div class="container-fluid">
-
-		<!-- Page Heading -->
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="page-header tournament-header">
-				<h1 class="tournament-title">Admin Panel Home</h1>
+	<div class="row">
+		<div class="col-lg-12">
+		{% with messages = get_flashed_messages() -%}
+			{% if messages %}
+				{% set last="" -%}
+				<div class="alert alert-danger" role="alert">
+				{% for message in messages %}
+					{% if message != last -%}
+						{{ message }}</br>
+					{%- endif %}
+					{% set last=message %}
+				{% endfor %}
 				</div>
-			</div>
+			{% endif %}
+		{%- endwith %}
 		</div>
-		<!-- /.row -->
+	</div>
 
-		<div class="row">
-			<div class="col-lg-12">
-				<ul class="list-group">
-					{% for t in tournaments -%}
-						<h3>{{ t.name }}</h3> <p>{{ t.location }} {{ t.date_string}}</p>
-						<a class="btn btn-primary btn-md" href="/admin/update?tid={{t.tid}}" role="button">Update Scores</a>
-						<a class="btn btn-primary btn-md" href="/admin/{{t.short_name}}" role="button">Manage Tournament</a>
-					{% endfor %}
-				</ul>
+	<div class="row">
+		<div class="col-lg-12">
+			{% if not tournaments -%}
+			<div class="well well-lg">
+				There are currently no active tournaments
 			</div>
+			{%- endif %}
+			<ul class="list-group">
+				{% for t in tournaments -%}
+					<h3>{{ t.name }}</h3> <p>{{ t.location }} {{ t.date_string}}</p>
+					<a class="btn btn-primary btn-md" href="/admin/update?tid={{t.tid}}" role="button">Update Scores</a>
+					<a class="btn btn-primary btn-md" href="/admin/{{t.short_name}}" role="button">Manage Tournament</a>
+				{% endfor %}
+			</ul>
 		</div>
-		<!-- /.row -->
 	</div>
 </div>
 {% endblock main %}
