--- a/app/templates/admin/show_update.html
+++ b/app/templates/admin/show_update.html
@@ -34,69 +34,66 @@ jQuery(document).ready(function($) {
 
 });
 </script>
-<div id="page-wrapper">
-	<div class="container-fluid">
-		<div class="page-header tournament-header">
-			<h1 class="tournament-title">Update scores for {{ tournament.name }}</h1>
-		</div>
-		{% with messages = get_flashed_messages() -%}
-			{% if messages %}
-				{% set last="" -%}
-				<div class="alert alert-danger" role="alert">
-				{% for message in messages %}
-					{% if message != last -%}
-					{{ message }}</br>
-					{%- endif %}
-					{% set last=message %}
-				{% endfor %}
-				</div>
-			{% endif %}
-		{%- endwith %}
-		<div class="alert alert-info" role="alert">
-			<p>To update a game, simply click on the row. Scores for games without both teams identified cannot be entered.</p>
-		</div>
-
-		<button id="toggleComplete" type="button" class="btn btn-default" value="off">
-			Hide Completed <span id="toggleComplete-glyph" class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-		</button>
-
-		<table id=games class="table table-striped">
-			<thead>
-				<tr>
-					<th>#</th>
-					<th>Start</th>
-					<th>Pool</th>
-					<th>White</th>
-					<th></th>
-					<th>Black</th>
-					<th></th>
-
-				</tr>
-			</thead>
-			<tbody>
-
-			{% for game in games -%}
-				{% if (game.black_tid < 0) or (game.white_tid < 0) -%}
-				<tr class="unplayed">
-				{% else %}
-					{% if game.score_b != "--" -%}
-					<tr class='clickableRow played' href="{{request.base_url}}?gid={{game.gid}}&tid={{tournament.tid}}">
-					{% else %}
-					<tr class='clickableRow unplayed' href="{{request.base_url}}?gid={{game.gid}}&tid={{tournament.tid}}">
-					{%- endif %}
-				{%- endif %}
-					<td>{{ game.gid }}</td>
-					<td>{{ game.day }} {{ game.start_time }}</td>
-					<td class="border-right">{{ game.pool }}</td>
-					<td class={{game.style_w}}>{{ game.white }} <strong>{{ game.note_w }}</strong></td>
-					<td>{{game.score_w}}</td>
-					<td class={{game.style_b}}>{{ game.black }} <strong>{{ game.note_b }}</stron></td>
-					<td>{{game.score_b}}</td>
-				</tr>
-			{%- endfor %}
-			</tbody>
-		</table>
-
+<div id="page_body" class="container">
+	<div class="page-header tournament-header">
+		<h1 class="tournament-title">Update scores for {{ tournament.name }}</h1>
 	</div>
+	{% with messages = get_flashed_messages() -%}
+		{% if messages %}
+			{% set last="" -%}
+			<div class="alert alert-danger" role="alert">
+			{% for message in messages %}
+				{% if message != last -%}
+				{{ message }}</br>
+				{%- endif %}
+				{% set last=message %}
+			{% endfor %}
+			</div>
+		{% endif %}
+	{%- endwith %}
+	<div class="alert alert-info" role="alert">
+		<p>To update a game, simply click on the row. Scores for games without both teams identified cannot be entered.</p>
+	</div>
+
+	<button id="toggleComplete" type="button" class="btn btn-default" value="off">
+		Hide Completed <span id="toggleComplete-glyph" class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+	</button>
+
+	<table id=games class="table table-striped">
+		<thead>
+			<tr>
+				<th>#</th>
+				<th>Start</th>
+				<th>Pool</th>
+				<th>White</th>
+				<th></th>
+				<th>Black</th>
+				<th></th>
+
+			</tr>
+		</thead>
+		<tbody>
+
+		{% for game in games -%}
+			{% if (game.black_tid < 0) or (game.white_tid < 0) -%}
+			<tr class="unplayed">
+			{% else %}
+				{% if game.score_b != "--" -%}
+				<tr class='clickableRow played' href="{{request.base_url}}?gid={{game.gid}}&tid={{tournament.tid}}">
+				{% else %}
+				<tr class='clickableRow unplayed' href="{{request.base_url}}?gid={{game.gid}}&tid={{tournament.tid}}">
+				{%- endif %}
+			{%- endif %}
+				<td>{{ game.gid }}</td>
+				<td>{{ game.day }} {{ game.start_time }}</td>
+				<td class="border-right">{{ game.pool }}</td>
+				<td class={{game.style_w}}>{{ game.white }} <strong>{{ game.note_w }}</strong></td>
+				<td>{{game.score_w}}</td>
+				<td class={{game.style_b}}>{{ game.black }} <strong>{{ game.note_b }}</stron></td>
+				<td>{{game.score_b}}</td>
+			</tr>
+		{%- endfor %}
+		</tbody>
+	</table>
 </div>
 {% endblock main %}
