--- a/app/templates/show_home.html
+++ b/app/templates/show_home.html
@@ -18,8 +18,8 @@
 					<p>
 					<p>
 						UWHScores.com provides a source for both players and tournament organizers to get valuable information about tournaments
-						as they happen. Players can follow their teams schedule, which is updated continuously throughout the tournament as games
-						are assigned from standings and bracket play.
+						as they happen. Players can follow their teams schedule, which is updated continuously throughout the tournament, and standings.
+						As games are played and bracket schedules are filled in based on the standings and game results.
 					</p>
 					<p>
 						For tournament organizers and officials, UWHScores handles all the difficult tasks of tabulating standings
@@ -54,7 +54,7 @@
 						<h4>
 						<strong>Standings in Real Time</strong>
 						</h4>
-						<p>Standings update as games unfold reflecting all results and tiebreakers</p>
+						<p>Standings calculated as games unfold reflecting all results and tiebreakers</p>
 				</div>
 				<div class="feature-item col-md-4">
 						<span class="fa-stack fa-4x">
@@ -68,10 +68,10 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row bottom-buffer">
 				<div class="col-md-12">
 					<h2>Questions?</h2>
-					<a class="btn btn-primary btn-md" href="/faq" role="button">Got more questions? Read our FAQ <span class="fa fa-chevron-right"></span></a>
+					<a class="btn btn-primary btn-md" href="/faq" role="button">Got more questions? Read the FAQ <span class="fa fa-chevron-right"></span></a>
 				</div>
 			</div>
 		</div>
