--- a/app/templates/show_tournament.html
+++ b/app/templates/show_tournament.html
@@ -135,7 +135,7 @@
 						{% if divisions -%}
 						<th>Div</th>
 						{%- endif %}
-						{% if pod_names -%}
+						{% if pods -%}
 						<th>Pod</th>
 						{%- endif %}
 						<th>Rank</th>
@@ -150,14 +150,14 @@
 				<tbody>
 				{% for rank in standings -%}
 				{% set team = rank.team %}
-					{% if not loop.first and (team.division != lastDiv or team.pod != lastPod ) -%}
+					{% if not loop.first and (team.pod != lastPod) or (team.division != lastDiv and lastPod == None ) -%}	
  				</tbody>
 				<thead>
 					<tr>
 						{% if divisions -%}
 						<th>Div</th>
 						{%- endif %}
-						{% if pod_names -%}
+						{% if pods -%}
 						<th>Pod</th>
 						{%- endif %}
 						<th>Rank</th>
