text changes for wins point rule change

--- a/app/templates/faq.html
+++ b/app/templates/faq.html
@@ -60,7 +60,7 @@
 				In addition to division, pod and team name, the fields on the standing are:
 				<ul>
 					<li> Rank - Where a team currently stands among the division or pod. Two teams may have the same rank if they are currently fully tied (see below for how ties are broken).</li>
-					<li> Points - The number of points the team has earned. Teams are ranked by points. A team earns two points for each win and one point for a tie.</li>
+					<li> Points - The number of points the team has earned. Teams are ranked by points. A team earns two or three points for each win (depending on tournament rules) and one point for a tie.</li>
 					<li> Record - Win-Loss-Tie record for only the games in the division/pod that the standings are calculated.</li>
 					<li> GA - Goals Allowed during the games for the division or pod played for points in the standing. Goals allowed is used as a tie-breaker if necessary. </li>
 					<li> GP - Games Played. Number of games the team has played in this division/pod. This only counts the games that will go towards points in the standing.</li>
@@ -142,6 +142,8 @@
 				<div class="panel-body">
 				<p>If a team forfeit's a match then it will cost them two points in the standings. The other team will receive
 				credit for a win and earn two points.</p>
+				<p>What about this new three points for a win rule though? Shouldn't a forfiet cost you three points?
+					That's an exilent question, but the rules still only say 2 points for a forfiet.</p>
 				</div>
 			</div>
 
