--- a/app/templates/show_tv.html
+++ b/app/templates/show_tv.html
@@ -1,20 +1,40 @@
 {% extends "tv_layout.html" %}
 
 {% block tabs %}
-<div id="page_body" style="margin-left:2em">
+<div id="page_body" class=container style="margin-left:2em">
 {% endblock tabs %}
 
 {% block games %}
 <div class=row>
 	<div id="schedule" class="col-md-8">
-		<h1>Schedule</h1>
+		<h1>{{ tournament.name }}</h1>
+		{% if site_message -%}
+			<div class="alert alert-info" role="alert">
+				<strong>Announcement:</strong>
+				<p>{{ site_message }}</p>
+			</div>
+		{%- endif %}
+		{% with messages = get_flashed_messages() %}
+		  {% if messages %}
+			<ul class=flashes>
+			{% for message in messages %}
+			  <li>{{ message }}</li>
+			{% endfor %}
+			</ul>
+		  {% endif %}
+		{% endwith %}
+	</div>
+</div>
+<div class=row>
+	<div class="col-md-8">
+		<h3>Schedule</h3>
 		<table id=games class="table table-striped">
 			<thead>
 				<tr>
 					<th>Game</th>
 					<th>Start Time</th>
-					<!-- <th>Pool</th>
-					<th>Pod</th> -->
+					<th>Pool</th>
+					<th>Pod</th>
 					<th>Black</th>
 					<th></th>
 					<th>White</th>
@@ -26,12 +46,8 @@
 				<tr>
 					<td>{{ game.gid }}</td>
 					<td>{{ game.day }} {{ game.start_time }}</td>
-					<!-- <td>{{ game.pool }}</td> -->
-					{% if game.pod_color %}
-						<!-- <td style="background-color:{{ game.pod_color }}">{{ game.pod }}</td> -->
-					{% else %}
-						<!-- <td>--</td> -->
-					{% endif %}
+					<td>{{ game.pool }}</td>
+					<td>{{ game.pod }}</td>
 					<td class={{game.style_b}}>{{ game.black }}</td>
 					<td>{{game.score_b}}</td>
 					<td class={{game.style_w}}>{{ game.white }}</td>
@@ -50,86 +66,75 @@
 		<table id=standings_tbl class="table table-striped">
 			<thead>
 				<tr>
+					{% if divisions -%}
+					<th>Div</th>
+					{%- endif %}
+					{% if pods -%}
+					<th>Pod</th>
+					{%- endif %}
 					<th>Rank</th>
-					<!-- <th>Pod</th> -->
 					<th>Team</th>
 					<th>Points</th>
 					<th>Record</th>
 					<th>GA</th>
 					<th>GP</th>
+					<th>Overall</th>
 				</tr>
 			</thead>
 			<tbody>
-			{% set lastPod ="" %}
-			{% set rank = 1 %}
-			{% for team in standings %}
-				{% if lastPod != team.pod and lastPod != ""%}
-					{% set rank = 1 %}
-					<tr><td>Rank</td><td>Pod</td><td>Team</td><td>Points</td><td>Record</td><td>GA</td><td>GP</td></tr>
-				{% endif %}
-				{% if rank % 2 == 0 %}
-					{% set class="even" %}
-				{% else %}
-					{% set class="odd" %}
-				{% endif %}
-	
+			{% for rank in standings -%}
+			{% set team = rank.team %}
+				{% if not loop.first and (team.pod != lastPod) or (team.division != lastDiv and lastPod == None ) -%}
+			</tbody>
+			<thead>
 				<tr>
-					<td>{{ rank }}</td>
-					<!-- <td>{{ team.pod}}</td> -->
+					{% if divisions -%}
+					<th>Div</th>
+					{%- endif %}
+					{% if pods -%}
+					<th>Pod</th>
+					{%- endif %}
+					<th>Rank</th>
+					<th>Team</th>
+					<th>Points</th>
+					<th>Record</th>
+					<th>GA</th>
+					<th>GP</th>
+					<th>Overall</th>
+				</tr>
+			</thead>
+			<tbody>
+				{%- endif %}
+				<tr>
+					{% if divisions -%}
+					<td>{{ team.division}}</td>
+					{%- endif %}
+					{% if team.pod != None -%}
+					<td>{{ team.pod }} </td>
+					{%- endif %}
+					<td>{{ rank.place }}</td>
 					<td>{{ team.name }}</td>
 					<td>{{ team.points }} </td>
 					<td>{{ team.wins }}-{{ team.losses }}-{{ team.ties }}</td>
 					<td>{{ team.goals_allowed }}</td>
 					<td>{{ team.games_played }} </td>
+					<td>{{ team.wins_t }}-{{ team.losses_t }}-{{ team.ties_t }}</td>
 				</tr>
-				{% set rank = rank + 1 %}
+				{% set lastDiv = team.division %}
 				{% set lastPod = team.pod %}
-			{% endfor %}
+			{%- endfor %}
 			<tbody>
 		</table>
 
-		{% with messages = get_flashed_messages() %}
-		  {% if messages %}
-			<ul class=flashes>
-			{% for message in messages %}
-			  <li>{{ message }}</li>
-			{% endfor %}
-			</ul>
-		  {% endif %}
-		{% endwith %}
+
 
 		{% endblock standings %}
 
 		{% block places %}
 		{% if placings %}
-		<h1>Placings</h1>
-		<table id=places_tbl class="table table-striped">
-			<thead>
-				<tr>
-					<th>Place</th>
-					<th>Team</th>
-				</tr>
-			</thead>
-			<tbody>
-			{% set row = 1 %}
-			{% for team in placings %}
-				{% if row % 2 == 0 %}
-					{% set class="even" %}
-				{% else %}
-					{% set class="odd" %}
-				{% endif %}
-				<tr class={{ class }} >
-					<td>{{ team.place }}</td><td class={{ team.style }}>{{ team.name }}</td>
-				</tr>
-				{% set row = row + 1 %}
-			{% endfor %}
-			</tbody>
-		</table>
 		{% endif %}
 	</div> <!-- Standings -->
 
 	</div> <!-- row -->
 </div> <!-- container -->
 {% endblock places %}
-
-
