--- a/app/templates/nav_bar.html
+++ b/app/templates/nav_bar.html
@@ -1,6 +1,6 @@
 {% block nav %}
 <!-- Navigation -->
-    {% if request.host_url != "https://uwhscores.com/" -%}
+    {% if request.host_url != "http://uwhscores.com/" -%}
     <nav class="navbar navbar-default navbar-inverse" role="navigation" style="background-color: #8A0808;">
     {% else %}
     <nav class="navbar navbar-default navbar-inverse" role="navigation">
