Fixed title text for tournament views by division and pod

--- a/app/templates/show_tournament.html
+++ b/app/templates/show_tournament.html
@@ -62,7 +62,7 @@
 
 		<div id="tabContents" class="tab-content">
 			<div id="schedule" class="tab-pane fade active in">
-					<h1>{{ titleText }} Schedule </h1>
+					<h1>{{ title_text }} Schedule </h1>
 					<nav id="dayPagerNav2">
 						<ul id="dayPager" class="pagination pagination-sm">
 							<li class="active toggleDay" day="All"><span>All</span></li>
