--- a/app/templates/admin/tournament_admin.html
+++ b/app/templates/admin/tournament_admin.html
@@ -171,11 +171,48 @@
 		</div>
 
 		<div class="col-lg-4">
+			<!--
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title"><i class="fa fa-long-arrow-right fa-fw"></i> Tournament Stats</h3>
 				</div>
 			</div>
+			-->
+
+			{% if authorized_users or unauthorized_users -%}
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title"><i class="fa fa-user fa-fw"></i>Admin Users</h3>
+				</div>
+				<div class="panel-body">
+					<ul class="list-group">
+						<li class="list-group-item active">Active Admins</li>
+						{% if authorized_users -%}
+						{% for u in authorized_users -%}
+						<li class="list-group-item">
+							{{ u.short_name }}
+							<a href="/admin/t/{{ tournament.short_name}}/update_admins?remove={{u.user_id}}"><i class="fa fa-fw fa-minus pull-right" style="color:red" aria-hidden="true"></i></a>
+						</li>
+
+						{%- endfor %}
+						{% else -%}
+						<li class="list-group-item disabled">
+							No Authorized Users
+						</li>
+						{% endif -%}
+						{% if unauthorized_users -%}
+						<li class="list-group-item active">Inactive Admins</li>
+						{% for u in unauthorized_users -%}
+						<li class="list-group-item">
+							{{ u.short_name }}
+							<a href="/admin/t/{{ tournament.short_name}}/update_admins?add={{u.user_id}}"><i class="fa fa-fw fa-plus pull-right" style="color:green" aria-hidden="true"></i></a>
+						</li>
+						{%- endfor %}
+						{% endif %}
+					</ul>
+				</div>
+			</div>
+			{%- endif %}
 		</div>
 	</div>
 </div>
