--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -62,6 +62,10 @@ tr.odd {
 	text-align: right;
 }
 
+#dayPagerNav2 {
+	clear: right;
+}
+
 .coin-flip {
 	line-height:2.4em;
 }
@@ -98,12 +102,16 @@ tr.odd {
 	}
 
 	h1 {
-		font-size:24px;
+		font-size:20px;
 	}
 
     .btn-lg {
         padding: 0px;
     }
+
+	.team-flag {
+		max-width: 160px;
+	}
 }
 
 @media print {
@@ -120,4 +128,12 @@ tr.odd {
 		padding: 0;
 		margin: 0;
 	}
+}
+
+.team-flag {
+	padding: 1em;
+}
+
+#tabContents {
+	padding-left: 1em;
 }
