--- a/app/templates/show_tournament.html
+++ b/app/templates/show_tournament.html
@@ -7,7 +7,7 @@
 {% block main %}
 <div id="page_body" class="container">
 	<div class="row">
-		<div class="col-md-8">
+		<div class="col-md-12">
 			<div class="page-header tournament-header">
 				<h1 class="tournament-title">{{ tournament.name }}</h1>
 				<h4 class="tournament-info">{{ tournament.location }} - {{ tournament.date_string }}</h4>
@@ -62,8 +62,16 @@
 
 		<div id="tabContents" class="tab-content">
 			<div id="schedule" class="tab-pane fade active in">
+				<div>
+					{%- if team_info and team_info.flag_url %}
+					<section class="hidden-sm hidden-xs">
+						<img class="team-flag pull-right" src="{{ team_info.flag_url }}" alt="Team Flag">
+					</section>
+					{% endif -%}
 					<h1>{{ title_text }} Schedule </h1>
-					<nav id="dayPagerNav2">
+				</div>
+				<div>
+					<nav id="dayPagerNav2" >
 						<ul id="dayPager" class="pagination pagination-sm">
 							<li class="active toggleDay" day="All"><span>All</span></li>
 							{% for day in tournament.days -%}
@@ -137,7 +145,7 @@
 						<p> Check back regularly to confirm future games.</p>
 					</div>
 					{%- endif %}
-
+				</div>
 			<div id="standings" class="tab-pane fade">
 			<h1>{{ titleText }} Standings</h1>
 			<table id=standings_tbl class="table table-striped">
