--- a/app/templates/admin/tournament_admin.html
+++ b/app/templates/admin/tournament_admin.html
@@ -117,6 +117,11 @@
 						above message until the issue can be resolved.
 					</div>
 				</div>
+
+				<div class="panel-body">
+					<h4>Manage Game Timing</h4>
+					<p><a class="btn btn-primary btn-md" href="/admin/t/{{tournament.short_name}}/gametimes" role="button">Update Timing Rules</a></p>
+				</div>
 			</div>
 
 			{% if redraws -%}
