Basic timing rule set administration on the admin page

--- a/app/templates/admin/tournament_admin.html
+++ b/app/templates/admin/tournament_admin.html
@@ -120,7 +120,7 @@
 
 				<div class="panel-body">
 					<h4>Manage Game Timing</h4>
-					<p><a class="btn btn-primary btn-md" href="/admin/t/{{tournament.short_name}}/gametimes" role="button">Update Timing Rules</a></p>
+					<p><a class="btn btn-primary btn-sm" href="/admin/t/{{tournament.short_name}}/gametiming" role="button">View Timing Rules</a></p>
 				</div>
 			</div>
 
