--- a/app/templates/admin/view_timing_rules.html
+++ b/app/templates/admin/view_timing_rules.html
@@ -57,7 +57,7 @@
 			<a class="btn btn-info btn-sm" data-toggle="collapse" href="#raw_json" role="button" aria-expanded="false" aria-controls="raw_json">
   			Show Raw JSON
 			</a>
-			<a class="btn btn-info btn-sm">Edit JSON</a>
+			<a class="btn btn-info btn-sm" href="/admin/t/{{tournament.short_name}}/editgametiming">Edit JSON</a>
 			<pre id=raw_json class=collapse></pre>
 		</div>
 	</div>
