--- a/app/templates/admin/view_timing_rules.html
+++ b/app/templates/admin/view_timing_rules.html
@@ -38,6 +38,7 @@
 		<div class="col-lg-12">
 			<p> These are the rules that govern game times. They are used by the Navisjon game manaagement system. </p>
 		</div>
+		{% if timing_rules %}
 		<div class="col-lg-12">
 			<h4> Default Game Rules</h4>
 			<p>These are the default timing rules used for game types that aren't in the special rules below</p>
@@ -51,6 +52,11 @@
 			{% include 'admin/timing_rule_table.html' %}
 			{% endfor %}
 		</div>
+		{% else %}
+		<div class="col-lg-12">
+			<h4>No timing rules defined</h4>
+		</div>
+		{% endif %}
 	</div>
 	<div class="row">
 		<div class="col-lg-12">
@@ -66,7 +72,7 @@
 $(document).ready(function(){
 
    $.ajax({
-            url: "http://{{request.host}}/api/v1/tournaments/{{tournament.tid}}/timingruleset",
+            url: "{{request.scheme}}://{{request.host}}/api/v1/tournaments/{{tournament.tid}}/timingruleset",
             type: 'GET',
             dataType: 'json',
             success: function(res) {
