Fixes to support https/http based on origin
Fixes into view/edit timing rules where it needs to make API calls
to populate fields and needs to know if it should use HTTP or HTTPS.

Can't use requests because production https site is behind proxy and
all calls are http by the time it makes it to the app. Instead, look
for localhost in request.host and act accordingly.

Fixes #46

--- a/app/templates/admin/edit_timing_json.html
+++ b/app/templates/admin/edit_timing_json.html
@@ -47,12 +47,16 @@
 $(document).ready(function(){
 
    $.ajax({
-            url: "http://{{request.host}}/api/v1/tournaments/{{tournament.tid}}/timingruleset",
-            type: 'GET',
-            dataType: 'json',
-            success: function(res) {
+			{% if "localhost" in  request.host  %}
+			url: "http://{{request.host}}/api/v1/tournaments/{{tournament.tid}}/timingruleset",
+			{% else % }
+			url: "https://{{request.host}}/api/v1/tournaments/{{tournament.tid}}/timingruleset",
+			{% endif %}
+			type: 'GET',
+			dataType: 'json',
+			success: function(res) {
 				document.getElementById("timing_json").innerHTML = JSON.stringify(res, null, 2)
-            }
+			}
         });
 
 })
