--- a/app/templates/admin/view_timing_rules.html
+++ b/app/templates/admin/view_timing_rules.html
@@ -72,7 +72,11 @@
 $(document).ready(function(){
 
    $.ajax({
-            url: "{{request.scheme}}://{{request.host}}/api/v1/tournaments/{{tournament.tid}}/timingruleset",
+	   		{% if "localhost" in request.host %}
+            url: "http://{{request.host}}/api/v1/tournaments/{{tournament.tid}}/timingruleset",
+			{% else %}
+			url: "https://{{request.host}}/api/v1/tournaments/{{tournament.tid}}/timingruleset",
+			{% endif %}
             type: 'GET',
             dataType: 'json',
             success: function(res) {
