Support for flag files everywhere
Added displaying flags next to team names on schedule, standings
and placings if flag files are present.

Currently just uses the same file scaled down since files are small
already, but can be switched over to thumbnails later if need be.

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -138,6 +138,11 @@ tr.odd {
 	clear: both;
 }
 
+img.flag-thumb {
+	height: 24px;
+	padding-right: .5em;
+}
+
 #tabContents {
 	padding-left: 1em;
 }
