--- a/app/templates/admin/edit_timing_json.html
+++ b/app/templates/admin/edit_timing_json.html
@@ -47,11 +47,11 @@
 $(document).ready(function(){
 
    $.ajax({
-			{% if "localhost" in  request.host  %}
+			{% if "localhost" in  request.host  -%}
 			url: "http://{{request.host}}/api/v1/tournaments/{{tournament.tid}}/timingruleset",
-			{% else % }
+			{%- else %}
 			url: "https://{{request.host}}/api/v1/tournaments/{{tournament.tid}}/timingruleset",
-			{% endif %}
+			{%- endif %}
 			type: 'GET',
 			dataType: 'json',
 			success: function(res) {
